--- a/src/main/resources/archetype-resources/.gitignore
+++ b/src/main/resources/archetype-resources/.gitignore
@@ -1,6 +1,11 @@
-/.classpath
-/.project
-/.settings
-/.DS_Store
-/target
-/release.properties
+
+/target;
+
+# eclipse stuff
+.classpath
+.project
+.settings
+
+# misc
+.DS_Store
+
