--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -13,6 +13,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <github.global.server>github</github.global.server>
   </properties>
 
+  <scm>
+    <connection>scm:git:git@github.com:asufana/${artifactId}.git</connection>
+    <developerConnection>scm:git:git@github.com:asufana/${artifactId}.git</developerConnection>
+    <url>scm:git:git@github.com:asufana/${artifactId}.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <build>
     <plugins>
       <plugin>
@@ -87,7 +94,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         </executions>
       </plugin>
     </plugins>
-  </build>
+</build>
 
   <dependencies>
     <!-- Test -->
